# serializer version: 1
# name: test_entry_diagnostics[view_plus]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': '**REDACTED**',
        'secret': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': '**REDACTED**',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
    'coordinator_data': dict({
      '2960000001': dict({
        'product_name': 'View Plus',
        'sensor_types': list([
          'battery',
          'co2',
          'humidity',
          'pm1',
          'pm25',
          'pressure',
          'radonShortTermAvg',
          'temp',
          'voc',
        ]),
      }),
    }),
  })
# ---
# name: test_entry_diagnostics[wave_enhance]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': '**REDACTED**',
        'secret': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': '**REDACTED**',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
    'coordinator_data': dict({
      '3210000003': dict({
        'product_name': 'Wave Enhance',
        'sensor_types': list([
          'battery',
          'co2',
          'humidity',
          'lux',
          'pressure',
          'sla',
          'temp',
          'voc',
        ]),
      }),
    }),
  })
# ---
# name: test_entry_diagnostics[wave_plus]
  dict({
    'config_entry': dict({
      'data': dict({
        'id': '**REDACTED**',
        'secret': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'airthings',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': '**REDACTED**',
      'unique_id': '**REDACTED**',
      'version': 1,
    }),
    'coordinator_data': dict({
      '2930000002': dict({
        'product_name': 'Wave Plus',
        'sensor_types': list([
          'battery',
          'co2',
          'humidity',
          'pressure',
          'radonShortTermAvg',
          'temp',
          'voc',
        ]),
      }),
    }),
  })
# ---
